Add S3 storage support with StaticStorage trait abstraction
Introduce a `StaticStorage` trait to abstract over different storage
backends, enabling support for both GCS and S3 (including S3-compatible
systems like MinIO, R2, etc.).

Changes:
- Add `StaticStorage` trait with `put()` and `name()` methods
- Implement trait for `GcsStorage` and `S3Storage`
- Refactor Context to use `Vec<Box<dyn StaticStorage>>` instead of
  separate GCS and S3 fields
- Simplify upload loop in copy_images_to_storage.rs to single iteration
- Rename `StaticStorageConfig` to `GcsStorageConfig` for clarity
- Add aws-config and aws-sdk-s3 dependencies
- Add tests with MockStaticStorage and InMemoryStorage implementations

Configuration format:
```toml
[[gcs_storage]]
bucket = "my-gcs-bucket"

[[s3_storage]]
bucket = "my-s3-bucket"
region = "us-west-2"
endpoint = "https://s3-compatible.example.com"  # optional
```

Claude Assisted

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ resolver = "2"
 anyhow = "1.0.100"
 async-bb8-diesel = { git = "https://github.com/oxidecomputer/async-bb8-diesel" }
 async-trait = "0.1.89"
+aws-config = "1"
+aws-sdk-s3 = "1"
 base64 = "0.22"
 bb8 = "0.8.6"
 chrono = "0.4.42"
