Containerfile and compose support with logging
* Updated and locked some dependencies for oxide specific crates that
  are git based.
* Added the Containerfile for container image building
* Added a compose.yml file to stand the stack up locally for testing
* added log_filter support for rfd-processor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,8 +53,8 @@ oauth2 = { version = "5.0.0", default-features = false, features = ["rustls-tls"
 octorust = "0.10.0"
 owo-colors = "4.2.2"
 partial-struct = { git = "https://github.com/oxidecomputer/partial-struct" }
-progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
-progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
+progenitor = { git = "https://github.com/oxidecomputer/progenitor", tag = "v0.11.2" }
+progenitor-client = { git = "https://github.com/oxidecomputer/progenitor", tag = "v0.11.2"}
 rand = "0.8.5"
 rand_core = "0.6"
 regex = "1.11.1"
@@ -112,12 +112,3 @@ pr-run-mode = "skip"
 [profile.dist]
 inherits = "release"
 lto = "thin"
-
-[patch."https://github.com/oxidecomputer/async-bb8-diesel"]
-async-bb8-diesel = {git = "https://github.com/nickryand/async-bb8-diesel", branch = "bump-diesel"}
-
-[patch."https://github.com/oxidecomputer/v-api"]
-v-api = { git = "https://github.com/nickryand/v-api", branch = "pending-migration" }
-v-api-installer = { git = "https://github.com/nickryand/v-api", branch = "pending-migration" }
-v-model = { git = "https://github.com/nickryand/v-api", branch = "pending-migration" }
-v-api-permission-derive = { git = "https://github.com/nickryand/v-api", branch = "pending-migration" }
